; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sipr16k.c_dequant.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sipr16k.c_dequant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, i32*, float**)* @dequant to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dequant(float* %0, i32* %1, float** %2) #0 {
  %4 = alloca float*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca float**, align 8
  %7 = alloca i32, align 4
  store float* %0, float** %4, align 8
  store i32* %1, i32** %5, align 8
  store float** %2, float*** %6, align 8
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %31, %3
  %9 = load i32, i32* %7, align 4
  %10 = icmp slt i32 %9, 4
  br i1 %10, label %11, label %34

11:                                               ; preds = %8
  %12 = load float*, float** %4, align 8
  %13 = load i32, i32* %7, align 4
  %14 = mul nsw i32 3, %13
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds float, float* %12, i64 %15
  %17 = load float**, float*** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds float*, float** %17, i64 %19
  %21 = load float*, float** %20, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* %7, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = mul nsw i32 3, %26
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds float, float* %21, i64 %28
  %30 = call i32 @memcpy(float* %16, float* %29, i32 12)
  br label %31

31:                                               ; preds = %11
  %32 = load i32, i32* %7, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %7, align 4
  br label %8

34:                                               ; preds = %8
  %35 = load float*, float** %4, align 8
  %36 = getelementptr inbounds float, float* %35, i64 12
  %37 = load float**, float*** %6, align 8
  %38 = getelementptr inbounds float*, float** %37, i64 4
  %39 = load float*, float** %38, align 8
  %40 = load i32*, i32** %5, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 4
  %42 = load i32, i32* %41, align 4
  %43 = mul nsw i32 4, %42
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds float, float* %39, i64 %44
  %46 = call i32 @memcpy(float* %36, float* %45, i32 16)
  ret void
}

declare dso_local i32 @memcpy(float*, float*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
